--- a/WMS/Views/_ViewStart.cshtml
+++ b/WMS/Views/_ViewStart.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
         if (ThemedRazorViewEngine.ThemingEnabled)
         {
-            Layout = "~/Views/Theme/Default/Shared/_Layout.cshtml";
+            Layout = "~/Views/Shared/_Layout.cshtml";
         }
 
     }
