--- a/WMS/Views/ProductsWebsitesMaps/Index.cshtml
+++ b/WMS/Views/ProductsWebsitesMaps/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Ganedata.Core.Entities.Helpers
 @{
-    Layout = "~/Views/Theme/Default/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Product Website Maps";
 }
 @section scripts {
