--- a/WMS/Views/Shared/_ProductPopups.cshtml
+++ b/WMS/Views/Shared/_ProductPopups.cshtml
@@ -114,6 +114,28 @@
 @Html.DevExpress().PopupControl(
     settings =>
     {
+        settings.Name = "pcModalProductAttributesValues";
+        settings.LoadContentViaCallback = LoadContentViaCallback.OnFirstShow;
+        settings.CallbackRouteValues = new { Controller = "Products", Action = "_ProductAttributePriceCreateEdit", Method = "GET" };
+        settings.Width = 600;
+        settings.Height = 350;
+        settings.AllowDragging = true;
+        settings.CloseAction = CloseAction.CloseButton;
+        settings.CloseOnEscape = true;
+        settings.PopupAnimationType = DevExpress.Web.AnimationType.None;
+        settings.ShowHeader = false;
+        settings.Modal = true;
+        settings.AutoUpdatePosition = true;
+        settings.PopupHorizontalAlign = PopupHorizontalAlign.WindowCenter;
+        settings.PopupVerticalAlign = PopupVerticalAlign.WindowCenter;
+        settings.ScrollBars = System.Web.UI.WebControls.ScrollBars.Vertical;
+        settings.ClientSideEvents.BeginCallback = "pcModalProductAttributesValues_BeginCallBack";
+        //settings.ClientSideEvents.CloseUp = "function(s, e){ ASPxClientEdit.ClearEditorsInContainer(null, '', true); }";
+    }).GetHtml()
+
+@Html.DevExpress().PopupControl(
+    settings =>
+    {
         settings.Name = "pcModalAttributes";
         settings.LoadContentViaCallback = LoadContentViaCallback.OnFirstShow;
         settings.CallbackRouteValues = new { Controller = "Products", Action = "_AttributeCreate", Method = "GET" };
