--- a/WMS/Views/ProductSpecialPrice/Edit.cshtml
+++ b/WMS/Views/ProductSpecialPrice/Edit.cshtml
@@ -58,8 +58,11 @@
     @Html.Hidden("LastEditingRowIndex")
     @Html.Hidden("LastEditingColIndex")
     @Html.Hidden("RowIndexForProductId")
+    @Html.Hidden("SelectedPriceGroupID", (int)ViewBag.PriceGroupId)
+    @Html.Hidden("SelectedProductID")
 
-    <div class="input-group h-100 justify-content-center align-items-center">
+
+    <div class="input-group h-100 justify-content-center align-items-center product-specialprice-form">
         @Html.Action("_GroupSpecialPrices", new { id = ViewBag.PriceGroupId })
     </div>
 }
