Final testing & fixes for Price group updates

--- a/WMS/Views/ProductSpecialPrice/_ProductGroupPricesPartial.cshtml
+++ b/WMS/Views/ProductSpecialPrice/_ProductGroupPricesPartial.cshtml
@@ -109,7 +109,7 @@
                 var id = (int?)DataBinder.Eval(m.DataItem, "PriceGroupID");
                 var productId = (int?)DataBinder.Eval(m.DataItem, "ProductID");
                 ViewContext.Writer.Write("<div class='text-center'>" +
-                                         "<a href=\"javascript:LoadPriceGroupAttributeEditForm('"+ id + "','" + productId + "')\"><i class='bt-gvactions fa fa-list-alt'></i></a>" +
+                                         "<a href=\"javascript:LoadPriceGroupAttributeEditForm('" + productId + "')\"><i class='bt-gvactions fa fa-list-alt'></i></a>" +
                                          "</div>");
 
             });
