--- a/WMS/Content/Theme/Default/Site.css
+++ b/WMS/Content/Theme/Default/Site.css
@@ -2104,6 +2104,9 @@ input[type=text].serial {
     .popup-with-overlays .dxpc-content {
         overflow: visible !important;
     }
+    .popup-with-overlays .dxpc-header {
+        background-color: #e7eff1 !important;
+    }
     .product-specialprice-form .bt-gvactions {
         padding: 3px;
         margin: 2px;
