--- a/WMS/Views/Shared/_ProductPopups.cshtml
+++ b/WMS/Views/Shared/_ProductPopups.cshtml
@@ -117,15 +117,17 @@
         settings.Name = "pcModalProductAttributesValues";
         settings.LoadContentViaCallback = LoadContentViaCallback.OnFirstShow;
         settings.CallbackRouteValues = new { Controller = "Products", Action = "_ProductAttributePriceCreateEdit", Method = "GET" };
-        settings.Width = 600;
-        settings.Height = 450;
+        settings.Width = 800;
+        settings.Height = 550;
         settings.AllowDragging = true;
         settings.CloseAction = CloseAction.CloseButton;
         settings.CloseOnEscape = true;
         settings.PopupAnimationType = DevExpress.Web.AnimationType.None;
-        settings.ShowHeader = false;
+        settings.ShowHeader = true;
+        settings.HeaderText = "Save Special Attribute Price";
         settings.Modal = true;
         settings.ControlStyle.CssClass = "popup-with-overlays";
+        
         settings.AutoUpdatePosition = true;
         settings.PopupHorizontalAlign = PopupHorizontalAlign.WindowCenter;
         settings.PopupVerticalAlign = PopupVerticalAlign.WindowCenter;
