--- a/WMS/Views/Shared/_OrderPopups.cshtml
+++ b/WMS/Views/Shared/_OrderPopups.cshtml
@@ -506,6 +506,31 @@
 @Html.DevExpress().PopupControl(
     settings =>
     {
+        settings.Name = "ModalPopupStockDetail";
+        settings.LoadContentViaCallback = LoadContentViaCallback.OnFirstShow;
+        settings.CallbackRouteValues = new { Controller = "SalesOrders", Action = "StockDetail", Method = "GET" };
+        settings.Width = 1000;
+        settings.Height = 500;
+        settings.AllowDragging = true;
+        settings.CloseAction = CloseAction.CloseButton;
+        settings.ShowCloseButton = true;
+        settings.CloseOnEscape = true;
+        settings.PopupAnimationType = DevExpress.Web.AnimationType.None;
+        settings.ShowHeader = true;
+        settings.HeaderText = "Detail About Stock";
+        settings.Modal = true;
+        settings.AutoUpdatePosition = true;
+        settings.PopupHorizontalAlign = PopupHorizontalAlign.WindowCenter;
+        settings.PopupVerticalAlign = PopupVerticalAlign.WindowCenter;
+        settings.ScrollBars = ScrollBars.Vertical;
+        settings.EnableClientSideAPI = true;
+        settings.ClientSideEvents.BeginCallback = "OrderProductStockDetailBeginCallBack";
+    }).GetHtml()
+
+
+@Html.DevExpress().PopupControl(
+    settings =>
+    {
         settings.Name = "ModalPopupEditSerializedProduct";
         settings.LoadContentViaCallback = LoadContentViaCallback.OnFirstShow;
         settings.CallbackRouteValues = new { Controller = "SalesOrders", Action = "EditSerialProduct", Method = "GET" };
