--- a/WMS/Views/PalletTracking/PalletSummary.cshtml
+++ b/WMS/Views/PalletTracking/PalletSummary.cshtml
@@ -5,12 +5,12 @@
 }
 <style>
     #_PalletTrackingDataListGridView_DXFooterRow {
-
         background-color: red !important;
         font-weight: bolder;
         color: whitesmoke;
     }
-      #_PalletTrackingDataListGridView_DXGroupRowExp0 {
+
+    #_PalletTrackingDataListGridView_DXGroupRowExp0 {
         background-color: red !important;
         font-weight: bolder;
         color: whitesmoke;
@@ -39,15 +39,18 @@
     }
 </script>
 
-<div class="col-md-12 p-0">
+<h2><span>Pallet Stock Summary</span></h2>
+<div class="col-md-12">
 
     @Html.Hidden("palletSummary", true)
-    <div class="col-md-6 offset-2 p-0  mb-3">
-        <label class="col-md-4">
-
-        </label>
+    <div class="col-md-12">
+       
         <div class="input-group h-100 justify-content-center align-items-center">
-            <div class="col-md-8">
+            <label class="col-md-4 text-danger">
+                Search by SKU Number, Barcode or Product Name
+
+            </label>
+            <div class="col-md-6">
                 @Html.Partial("ProductLargeDataComboBoxPartial")
             </div>
 
@@ -56,7 +59,7 @@
 
     </div>
     <div class="pallet-refresh" style="display: none;">
-        @Html.Action("_PalletTrackingListDetail",new {pId=0})
+        @Html.Action("_PalletTrackingListDetail", new { pId = 0 })
     </div>
 
 
