--- a/WMS/Views/Shared/_Layout-no-header-left.cshtml
+++ b/WMS/Views/Shared/_Layout-no-header-left.cshtml
@@ -27,7 +27,7 @@
     @Scripts.Render("~/bundles/unobtrusive")
     <script src="~/Scripts/jscolor.js"></script>
 
-    <link href="@Url.Action("AppStyle", "UISettings", new { filePath = "/Content/Theme/Default/ui-settings.css"})" rel="stylesheet" type="text/css" />
+   @* <link href="@Url.Action("AppStyle", "UISettings", new { filePath = "/Content/Theme/Default/ui-settings.css"})" rel="stylesheet" type="text/css" />*@
 
     @RenderSection("scripts", required: false)
 
